update project React Native to 0.63.0rc

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@react-native-community/async-storage": "^1.6.2",
     "emotion-theming": "^10.0.14",
     "moment": "^2.24.0",
-    "react": "16.9.0",
-    "react-native": "0.61.4",
+    "react": "16.13.1",
+    "react-native": "0.63.0-rc.0",
     "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-iphone-x-helper": "^1.2.1",
@@ -32,16 +32,16 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.18",
     "@types/react-native": "^0.60.22",
     "@types/react-redux": "^7.1.5",
     "@types/react-test-renderer": "16.9.0",
     "@types/redux-actions": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "domakey": "^0.0.6",
     "eslint": "^6.2.1",
@@ -51,11 +51,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.1.0",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "lint-staged": "^10.0.0-beta.7",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "16.9.0",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.7.3"
   },
